system working ok

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="maxAltitude"></p>
       </div>
       <canvas width="360" height="400" id="canvas-top" style="border: 1px solid #eee"></canvas>
-      <canvas width="360" height="360" id="canvas-side"></canvas>
+      <canvas width="360" height="400" id="canvas-side"style="border: 1px solid #eee"></canvas>
     </section>
     <footer>
     </footer>
