--- a/index.html
+++ b/index.html
@@ -2,32 +2,48 @@
 <html lang="es">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/escotometro.css">
 	<title>Escotómetro</title>
 </head>
-  <body>
-    <header>
-      <h1>Escotómetro</h1>
-    </header>
-    <section>
-      <div class="lat-box">
-        <span>Latitud: </span>
-        <input type="text" class="lat-value" placeholder="-38"/>
-      </div>
-      <div class="dates">
-        <span class="december">Solsticio Verano</span>
-        <span class="march">Equinoccios</span>
-        <span class="june">Solsticio Invierno</span>
-      </div>
-      <div class="result">
-        <p class="sunriseAzimuth"></p>
-        <p class="sunsetAzimuth"></p>
-        <p class="maxAltitude"></p>
-      </div>
-      <canvas width="360" height="400" id="canvas-top" style="border: 1px solid #eee"></canvas>
-      <canvas width="360" height="400" id="canvas-side"style="border: 1px solid #eee"></canvas>
-    </section>
-    <footer>
-    </footer>
+  <body class="background-winter">
+    <div class="container">
+      <header>
+        <div class="wrap text-center text-title">
+          <h1 class="site-title">Escotómetro</h1>
+        </div>
+      </header>
+      <section>
+        <div class="lat-box">
+          <div class="wrap text-center">
+            <span>Latitud: </span>
+            <input type="text" class="lat-value button white" size="3" placeholder="-38"/>
+            <span>grados</span>
+          </div>
+        </div>
+        <div class="dates">
+          <div class="wrap text-center">
+            <span class="december button white">Verano</span>
+            <span class="march button white">Equinoccios</span>
+            <span class="june button white">Invierno</span>
+          </div>
+        </div>
+        <div class="result">
+          <div class="wrap text-center">
+            <div class="draw-top text-center one-half first">
+              <canvas width="360" height="400" id="canvas-top"></canvas>
+              <div class="draw-top-text"></div>
+            </div>
+            <div class="draw-side one-half">
+              <canvas width="360" height="400" id="canvas-side"></canvas>
+              <div class="draw-side-text"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+      </footer>
+    </div>
     <script type="text/javascript" src="suncalc/suncalc.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="js/escotometro.js"></script>
