--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="es">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.0.0/normalize.min.css">
-  <link rel="stylesheet" href="css/escotometro.css">
-	<title>Escotómetro</title>
-</head>
-  <body class="background-winter">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/escotometro.css">
+    <title>Escotómetro</title>
+  </head>
+  <body class="background">
     <div class="container">
       <header>
         <div class="wrap text-center text-title">
