month name and number as variables

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/escotometro.css">
     <title>Escotómetro</title>
@@ -31,11 +32,11 @@
         <div class="result">
           <div class="wrap text-center">
             <div class="draw-top text-center one-half first">
-              <canvas width="360" height="400" id="canvas-top"></canvas>
+              <canvas width="360" height="400" id="canvas-top" class="drawing"></canvas>
               <div class="draw-top-text"></div>
             </div>
             <div class="draw-side one-half">
-              <canvas width="360" height="400" id="canvas-side"></canvas>
+              <canvas width="360" height="400" id="canvas-side" class="drawing"></canvas>
               <div class="draw-side-text"></div>
             </div>
           </div>
