--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
         <div class="lat-box">
           <div class="wrap text-center">
             <span>Latitud: </span>
-            <input type="text" class="lat-value button white" size="3" placeholder="-38"/>
+            <input type="text" class="lat-value" size="3" placeholder="-38"/>
             <span>grados</span>
+            <div class="help">
+              Indique la latitud del lugar
+            </div>          
           </div>
+
         </div>
         <div class="dates">
           <div class="wrap text-center">
