blur background and fix responsive header

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
   <body class="background">
     <div class="container">
       <header>
-        <div class="wrap text-center text-title">
-          <h1 class="site-title"><a href="http://escotometro.ggsalas.com">Escotómetro</a></h1>
-        </div>
         <nav class="navigation">
           <ul class="nav-left">
             <li class="nav-button">
@@ -36,6 +33,9 @@
             </li>
           </ul>     
         </nav>
+         <div class="wrap text-center text-title">
+          <h1 class="site-title"><a href="http://escotometro.ggsalas.com">Escotómetro</a></h1>
+        </div>       
       </header>
       <section>
         <div class="lat-box">
@@ -63,6 +63,7 @@
           </div>
         </div>
         <div class="result hidden">
+          <div class="blur"></div>
           <div class="wrap text-center">
             <div class="draw-top text-center one-half first">
               <canvas width="360" height="400" id="canvas-top" class="drawing"></canvas>
