OG fb & twitter

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <!-- JS for Wimagguc -->
     <script src="wimagguc/jquery-gmaps-latlon-picker.js"></script>
 
+    <!-- Meta tags twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ggsalas">
+    <meta name="twitter:creator" content="@ggsalas">
+    <meta name="twitter:title" content="Simple JS App para calcular la posición del sol">
+    <meta name="twitter:description" content="Datos básicos para el diseño solar arquitectónico.">
+    <meta name="twitter:image" content="https://i.imgur.com/Up5lkWi.png">
+
+    <!-- Meta tags Facebook -->
+    <meta property="og:title" content="Simple JS App para calcular la posición del sol">
+    <meta property="og:site_name" content="ggsalas.com">
+    <meta property="og:url" content="http://escotometro.ggsalas.com/">
+    <meta property="og:img" content="https://i.imgur.com/Up5lkWi.png">
+    <meta property="og:description" content="Datos básicos para el diseño solar arquitectónico.">
+    <meta property="fb:app_id" content="">
+    <meta property="og:type" content="website">
+
     <title>Escotómetro</title>
   </head>
   <body class="background">
