--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content="http://escotometro.ggsalas.com/">
     <meta property="og:img" content="https://i.imgur.com/Up5lkWi.png">
     <meta property="og:description" content="Datos básicos para el diseño solar arquitectónico.">
-    <meta property="fb:app_id" content="">
+    <meta property="fb:app_id" content="187299351314965">
     <meta property="og:type" content="website">
 
     <title>Escotómetro</title>
