--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <meta name="twitter:creator" content="@ggsalas">
     <meta name="twitter:title" content="Simple JS App para calcular la posición del sol">
     <meta name="twitter:description" content="Datos básicos para el diseño solar arquitectónico.">
-    <meta name="twitter:image" content="https://i.imgur.com/Up5lkWi.png">
+    <meta name="twitter:image" content="http://escotometro.ggsalas.com/img/ogImage.png">
 
     <!-- Meta tags Facebook -->
     <meta property="og:title" content="Simple JS App para calcular la posición del sol">
     <meta property="og:site_name" content="ggsalas.com">
     <meta property="og:url" content="http://escotometro.ggsalas.com/">
-    <meta property="og:img" content="https://i.imgur.com/Up5lkWi.png">
+    <meta property="og:img" content="http://escotometro.ggsalas.com/img/ogImage.png">
     <meta property="og:description" content="Datos básicos para el diseño solar arquitectónico.">
     <meta property="fb:app_id" content="187299351314965">
     <meta property="og:type" content="website">
