--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Simple JS App para calcular la posición del sol">
     <meta property="og:site_name" content="ggsalas.com">
     <meta property="og:url" content="http://escotometro.ggsalas.com/">
-    <meta property="og:img" content="http://escotometro.ggsalas.com/img/ogImage.png">
+    <meta property="og:image" content="http://escotometro.ggsalas.com/img/ogImage.png">
     <meta property="og:description" content="Datos básicos para el diseño solar arquitectónico.">
     <meta property="fb:app_id" content="187299351314965">
     <meta property="og:type" content="website">
