install deps from node_modules

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
     <!-- JS for Wimagguc -->
-    <script src="wimagguc/jquery-gmaps-latlon-picker.js"></script>
+    <script src="js/vendor/jquery-gmaps-latlon-picker.js"></script>
 
     <!-- Meta tags twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -111,7 +111,7 @@
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="suncalc/suncalc.js"></script>
+    <script type="text/javascript" src="js/vendor/suncalc.js"></script>
     <script type="text/javascript" src="js/escotometro.js"></script>
     <script type="text/javascript" src="js/canvas.js"></script>
   </body>
